compiler/tests/ui/fail/macro_transparency.rs
#[compiler::macro_transparency(transparency)]
macro_rules! print {
    () => {}
}

fn main() {}
