compiler/tests/ui/fail/macro_transparency.stderr
error: should be opaque, semiopaque, semitransparent or transparent
 --> tests/ui/fail/macro_transparency.rs:1:32
  |
1 | #[compiler::macro_transparency(transparency)]
  |                                ^^^^^^^^^^^^
